--- a/login.css
+++ b/login.css
@@ -1,5 +1,7 @@
 /*plano de deixar a intrface bonita, porem simples*/
 body {
+  align-items: center;
+  justify-content: center;
   margin: auto;
   width: 100%;
   max-width: 588px;
@@ -107,6 +109,7 @@ input:hover {
 }
 /*formulario principal!*/
 form {
+  width: 60%;
   display: flex;
   flex-direction: column;
   margin: 25px;
