--- a/login.css
+++ b/login.css
@@ -4,10 +4,12 @@ body {
   justify-content: center;
   margin: auto;
   width: 100%;
+  max-width: 588px;
   display: flex;
   flex-direction: column;
   background-image: url(./foto.png);
   background-repeat: no-repeat;
+  background-position-y: top;
   background-size: cover;
   transition: 1s;
 }
@@ -139,4 +141,8 @@ form:hover {
 .h1:hover {
   color: rgba(187, 187, 228, 0.884);
   padding: 10px;
+}
+footer{
+  margin: 100px;
+  font-size: 20px;
 }
