--- a/login.css
+++ b/login.css
@@ -110,6 +110,7 @@ input:hover {
 }
 /*formulario principal!*/
 form {
+  max-width: 588px;
   width: 60%;
   display: flex;
   flex-direction: column;
