--- a/login.css
+++ b/login.css
@@ -146,4 +146,5 @@ form:hover {
 footer{
   margin: 100px;
   font-size: 20px;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
