--- a/login.css
+++ b/login.css
@@ -3,7 +3,7 @@ body {
   height: 100%;
   align-items: center;
   justify-content: center;
-  margin: auto;
+  margin-bottom: 300%;
   width: 100%;
   max-width: 588px;
   display: flex;
